Lots of work done: -Receives response from server/backend and correctly parses the json data into js objects. -From the data, assembles table cells into rows, and appends rows to the DOM 	-STILL NEEDS adding extra rows for companies with multiple contacts -Added js function to handle the Select-All button and toggling the checkboxes. 	-May have tried to make the function do too much. The arguments/parameters in js are frustrating. -TODO: I briefly tried to make all new companies auto-selected upon being appended to the page but it didn't happen. gonna fix that.
-Tried to add session to Flask app; it's there, but I think there is a security error with the cookies in browser?
-Added differentiation between total list of companies, and the ones added by the most recent request.

-The page banner shows the number of total companies in the table; this is temporary but the counter will end up somewhere.
-Added some breathing room to the bottom of the page

-Lots more still to do.

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,7 +1,17 @@
 body {
   background-color: navy;
   font-size: 1.2em;
+  min-height: 100vh
 }
+
+#content {
+  min-height: 100vh;
+  padding-bottom: 20vh;
+}
+
+/* #footer {
+  padding-top: 200px;
+} */
 
 #banner {
   text-align: center;
@@ -42,7 +52,6 @@ body {
   font-size: .9em;
   height: 20em;
   width: 50vw;
-  flex
 }
 
 #input-button-wrapper {
@@ -66,6 +75,7 @@ body {
   background-color: green;
   margin-left: 5vw;
   margin-top: 5vh;
+  margin-bottom: 10vh;
 }
 
 #select-all-wrapper {
@@ -75,7 +85,7 @@ body {
 
 .table-section {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
 }
 
@@ -86,7 +96,8 @@ body {
 }
 
 .table-field {
-
+  border-style: solid;
+  border-width: 2px;
   background-color: red;
   width: 12vw;
   font-size: .7em;
